Anpassung der Viewports 360, 768 und 1024

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <a href="#"><img src="./resources/images/inselbrauerei_logo.svg" alt="Company Logo"></a>
             </div>
             <div id="nav__user-bereich">
-                <a href="#"><img src="./resources/images/user_icon.svg" alt="User-Icon"></a>
-                <a href="#"><img src="./resources/images/cart_icon.svg" alt="Shopping Cart"></a>
+                <a href="#"><img class="user-icon" src="./resources/images/user_icon.svg" alt="User-Icon"></a>
+                <a href="#"><img class="cart-icon" src="./resources/images/cart_icon.svg" alt="Shopping Cart"></a>
             </div>
         </nav>
     </div>
@@ -42,7 +42,7 @@
                         <h1>Lorem ipsum</h1>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam nesciunt placeat et ipsa dignissimos veniam quod veritatis id voluptatum quis.</p>
                     </div>
-                    <button class="hero-section__hook-cta">Jetzt <br>entdecken</button>
+                    <button class="hero-section__hook-cta">Jetzt entdecken</button>
                 </div>
             </div>
         </div>
