Anpassung und Importierung der Font-Faces sowie Anordnungen

--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
         </div>
         <!-- beer range -->
         <section class="special-selection">
-            <h3>
-                Unsere besonderen Biere
-            </h3>
+            <div class="special-selection__header">
+                <h3>
+                    Unsere besonderen Biere
+                </h3>
+            </div>
             <div class="special-selection__beers">
                 <div class="special-selection__beer">
                     <div class="special-selection__beer-image">
@@ -60,9 +62,11 @@
                         <h3 class="beer-titel">Insel Pilsner</h3>
                         <p class="beer-flavour">Wet Hopped</p>
                         <br>
-                        <p class="beer-preis">14,94 €</p>
-                        <p class="beer-size">7,55 € / Liter</p>
-                        <p class="beer-pfand">zzgl. Pfand: 0,48 €</p>
+                        <div class="beer_infos">
+                            <p class="beer-preis">14,94 €</p>
+                            <p class="beer-size">7,55 € / Liter</p>
+                            <p class="beer-pfand">zzgl. Pfand: 0,48 €</p>
+                        </div>
                     </div>
                 </div>
                 <div class="special-selection__beer">
@@ -73,9 +77,11 @@
                         <h3 class="beer-titel">Insel Saison</h3>
                         <p class="beer-flavour">Wet Hopped</p>
                         <br>
-                        <p class="beer-preis">14,94 €</p>
-                        <p class="beer-size">7,55 € / Liter</p>
-                        <p class="beer-pfand">zzgl. Pfand: 0,48 €</p>
+                        <div class="beer_infos">
+                            <p class="beer-preis">14,94 €</p>
+                            <p class="beer-size">7,55 € / Liter</p>
+                            <p class="beer-pfand">zzgl. Pfand: 0,48 €</p>
+                        </div>
                     </div>
                 </div>
                 <div class="special-selection__beer">
@@ -86,9 +92,11 @@
                         <h3 class="beer-titel">Insel Kap</h3>
                         <p class="beer-flavour">Wet Hopped</p>
                         <br>
-                        <p class="beer-preis">14,94 €</p>
-                        <p class="beer-size">7,55 € / Liter</p>
-                        <p class="beer-pfand">zzgl. Pfand: 0,48 €</p>
+                        <div class="beer_infos">
+                            <p class="beer-preis">14,94 €</p>
+                            <p class="beer-size">7,55 € / Liter</p>
+                            <p class="beer-pfand">zzgl. Pfand: 0,48 €</p>
+                        </div>
                     </div>
                 </div>
                 <div class="special-selection__beer">
@@ -99,9 +107,11 @@
                         <h3 class="beer-titel">East Coast</h3>
                         <p class="beer-flavour">Wet Hopped</p>
                         <br>
-                        <p class="beer-preis">14,94 €</p>
-                        <p class="beer-size">7,55 € / Liter</p>
-                        <p class="beer-pfand">zzgl. Pfand: 0,48 €</p>
+                        <div class="beer_infos">
+                            <p class="beer-preis">14,94 €</p>
+                            <p class="beer-size">7,55 € / Liter</p>
+                            <p class="beer-pfand">zzgl. Pfand: 0,48 €</p>
+                        </div>
                     </div>
                 </div>
                 <div class="special-selection__beer">
@@ -112,9 +122,11 @@
                         <h3 class="beer-titel">Insel Kreide</h3>
                         <p class="beer-flavour">Wet Hopped</p>
                         <br>
-                        <p class="beer-preis">14,94 €</p>
-                        <p class="beer-size">7,55 € / Liter</p>
-                        <p class="beer-pfand">zzgl. Pfand: 0,48 €</p>
+                        <div class="beer_infos">
+                            <p class="beer-preis">14,94 €</p>
+                            <p class="beer-size">7,55 € / Liter</p>
+                            <p class="beer-pfand">zzgl. Pfand: 0,48 €</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -193,7 +205,7 @@
             </ul>
         </div>
         <div class="logo_socials">
-            <img src="./resources/images/Group 908.svg" alt="Company Logo">
+            <div class="company_logo"><img src="./resources/images/Group 908.svg" alt="Company Logo"></div>
             <div class="socials">
                 <a href="#"><img src="./resources/images/facebook.svg" alt="Facebook"></a>
                 <a href="#"><img src="./resources/images/twitter.svg" alt="Twitter"></a>
