Implementierung des Shop-Submenüs und Anpassung des Footers

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           </div>
         <nav>
             <ul id="menu-items">
-                <li><a href="#" class="menu-item" id="menu_shop">Shop</a></li>
+                <li><a href="#" class="menu-item" id="menu_shop">Shop <i class="arrow"></i></a></li>
                 <li><a href="#" class="menu-item">Brauphilosopie</a></li>
                 <li><a href="#" class="menu-item">Insel & Natur</a></li>
                 <li><a href="#" class="menu-item">Brauerei</a></li>
@@ -32,6 +32,14 @@
                 <a href="#"><img class="cart-icon" src="./resources/images/cart_icon.svg" alt="Shopping Cart"></a>
             </div>
         </nav>
+        <div>
+            <ul id="shop_subcategories">
+                <li><a class="shop_subcategory" href="#">Seltene Biere</a></li>
+                <li><a class="shop_subcategory" href="#">Pick & Match</a></li>
+                <li><a class="shop_subcategory" href="#">Flaschenpost</a></li>
+                <li><a class="shop_subcategory" href="#">Gläser</a></li>
+            </ul>
+        </div>
     </div>
     <main>
         <!-- hero-section -->
