--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         <div class="beer_infos">
                             <p class="beer-preis">14,94 €</p>
                             <p class="beer-size">7,55 € / Liter</p>
-                            <p class="beer-pfand">zzgl. Pfand: 0,48 €</p>
+                            <p class="beer-pfand last">zzgl. Pfand: 0,48 €</p>
                         </div>
                     </div>
                 </div>
