Beginn der Implementierung einer Contact-Form in Kombination mit PHP

--- a/index.html
+++ b/index.html
@@ -190,6 +190,15 @@
             </div>
         </section>
     </main>
+    <div class="contact-form">
+        <form action="https://demo-inselbrauerei.dmc/resources/php/send.php" method="POST" class="form-inline">
+            <label for="">Bitte E-Mail eingeben:</label>
+            <div class="interactive-components">
+                <input type="text" name="senders_email" placeholder="E-Mail" class="form-control">
+                <input type="submit" value="Senden" class="submit btn">
+            </div>
+        </form>
+    </div>
     <!-- Footer -->
     <footer>
         <div class="services">
