Erfolgreiche Abnahme von Lukas der Grundfunktionen. Vue-Component wird eingebaut

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./resources/css/style.css">
-    <script src="./resources/js/app.js" defer></script>
+    <script src="https://unpkg.com/vue@next"></script>
+    <script src="./dist/js/app.js"></script>
     <title>Inselbrauerei</title>
 </head>
 <body>
@@ -190,14 +191,9 @@
             </div>
         </section>
     </main>
-    <div class="contact-form">
-        <form action="https://demo-inselbrauerei.dmc/resources/php/send.php" method="POST" class="form-inline">
-            <label for="">Bitte E-Mail eingeben:</label>
-            <div class="interactive-components">
-                <input type="text" name="senders_email" placeholder="E-Mail" class="form-control">
-                <input type="submit" value="Senden" class="submit btn">
-            </div>
-        </form>
+    <!-- contact form from vue-component -->
+    <div id="app">
+        <contactForm></contactForm>
     </div>
     <!-- Footer -->
     <footer>
@@ -239,6 +235,14 @@
                 </div>
             </form>
         </div>
-    </footer>
+    </footer>    
+
+    <!-- import component -->
+    <script src="./resources/js/Components/ContactForm.js"></script>
+
+    <!-- mount app -->
+    <script>
+        const mountedApp = app.mount('#app')
+    </script>
 </body>
 </html>
