--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./resources/css/style.css">
+    <!-- import vuejs -->
     <script src="https://unpkg.com/vue@next"></script>
-    <script src="./resources/js/app.js"></script>
+    <!-- import jquery-api -->
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
+    
+    <!-- import vue-createApp -->
     <script src="./resources/js/app_vue.js"></script>
     <title>Inselbrauerei</title>
 </head>
@@ -237,8 +241,12 @@
             </form>
         </div>
     </footer>    
+
+   
     <!-- import component -->
     <script src="./resources/js/Components/ContactForm.js"></script>
+     <!-- import js-file -->
+     <script src="./resources/js/app.js"></script>
     <!-- mount app -->
     <script>
         const mountedApp = app.mount('#app')
